--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -9,11 +9,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<main>
 <div class="slider-container">
     <div class="slider">
-        <div class="slide">Слайд 1</div>
-        <div class="slide">Слайд 2</div>
-        <div class="slide">Слайд 3</div>
+        <div class="slide"><img src="images/Пата.jpg" alt="Пата"></div>
+        <div class="slide"><img src="images/Цестус.jpg" alt="Цестус"></div>
+        <div class="slide"><img src="images/Сантесу.jpg" alt="Сантесу"></div>
+        <div class="slide"><img src="images/Туркана.jpg" alt="Туркана"></div>
+        <div class="slide"><img src="images/SAP.jpg" alt="SAP"></div>
+        <div class="slide"><img src="images/Коготь_тигра.jpg" alt="Кіготь тигра"></div>
+        <div class="slide"><img src="images/Рога_оленя.jpg" alt="Роги оленя"></div>
+        <div class="slide"><img src="images/Тэкко.jpg" alt="Текко"></div>
+        <div class="slide"><img src="images/Гадлинг.jpg" alt="Гадлінг"></div>
+        <div class="slide"><img src="images/Нож-кастет.jpg" alt="Ніж-кастет"></div>
     </div>
     <div class="slider-nav">
         <button class="prev">Попередній</button>
@@ -23,5 +31,6 @@
     </div>
 </div>
 <script src="js/main.js"></script>
+</main>
 </body>
 </html>
